# hero-api

./: .env.example  .gitignore  README.md  data.db  db.sqlite3  justfile  pyproject.toml
alembic/: env.py
alembic/versions/: 38fb36441719_init.py  8ce27dddf7cc_init.py  a884ec7e85e5_init.py  ea0b3e272c8d_init.py  f4473942bd3b_init.py
app/: api.py  deps.py  main.py  models.py
app/core/: config.py  cors.py  db.py  logging.py
app/db/: schema.py  session.py
app/routers/: heroes.py  missions.py  teams.py
app/routes/: heroes.py  missions.py  teams.py
tests/: conftest.py  test_heroes.py
