[project]
name = "hero-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.31",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
    "ty>=0.0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E", "F",     # Default Error & Pyflakes
    "RUF",        # Ruff-specific rules
    "W",          # pycodestyle warnings
    "C4",         # flake8-comprehensions
    "UP",         # pyupgrade
    "ARG001",     # unused arguments in functions
    "ANN",        # flake8-annotations (Strict type hinting)
    "UP",         # pyupgrade (Newest type syntax: e.g., int | None)
    "B",          # flake8-bugbear (Common logic errors)
    "I",          # isort (Import sorting)
    "FAST",       # FastAPI,
    "ASYNC",      # flake8-async (crucial for FastAPI/Async SQLAlchemy)
]

[tool.ruff.lint.per-file-ignores]
# IGNORE RULES FOR TESTS
# S101    # Flake8-bandit – asserts are standard in pytest
# S105    # Flake8-bandit – possible hardcoded password
# S106    # Flake8-bandit – possible hardcoded password in function argument
# S107    # Flake8-bandit – hardcoded passwords in function defaults (test helpers need defaults)
# PLR2004 # Pylint – magic values (e.g. 404, 200) are common in tests
# SLF001  # Flake8-self – private member access needed to test internal state
# D       # Pydocstyle – docstrings are often redundant in verbose test names
# ANN     # Flake8-annotations – type annotations are unnecessary overhead for tests
# ARG001  # Flake8-unused-arguments – pytest fixtures ensure state exists even when not directly used
# PLC0415 # Pylint – local imports in tests are valid for test isolation and self-contained tests
# EM102   # Flake8-errmsg – f-string exceptions in test helpers are acceptable for debugging
"test_*.py" = ["S101", "S105", "S106", "S107", "PLR2004", "SLF001", "D", "ANN", "ARG001", "PLC0415", "EM102"]
"*_test.py" = ["S101", "S105", "S106", "S107", "PLR2004", "SLF001", "D", "ANN", "ARG001", "PLC0415", "EM102"]
